# gl-engine

./: .scratchpad.txt  CMakeLists.txt  README.md
src/: camera.cpp  light.cpp  main.cpp  mesh.cpp  precomp.h  shader.cpp  texture.cpp  window.cpp
src/glsl/: fragment.glsl  vertex.glsl
src/include/: camera.h  light.h  mesh.h  shader.h  texture.h  window.h
